--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,19 @@ repositories {
 }
 
 dependencies {
+    // 생성 시 선택한 basic dependency
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // security 설정 보류
+    // implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    // handlebars template engine
+    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1'
+
+    // database
+    runtimeOnly 'com.h2database:h2'
 }
